@@ -18,6 +18,7 @@
     <script type="text/javascript" src="search_def.php"></script>
     <script>
         INTERMediatorOnPage.doBeforeConstruct = ()=>{
+          INTERMediatorLog.suppressDebugMessageOnPage = true;
           INTERMediatorLog.errorMessageByAlert = true;
         }
     </script>
