@@ -231,7 +231,7 @@ class Proxy extends UseSharedObjects implements Proxy_Interface
                     $msgProxy = new MessagingProxy($driver);
                     $msgResult = $msgProxy->processing($this, $msgArray, $result);
                     if ($msgResult !== true) {
-                        $this->logger->setErrorMessage("Mail sending error: $msgResult");
+                        $this->logger->setWarningMessage("Mail sending error: $msgResult");
                     }
                 }
             }
@@ -339,7 +339,7 @@ class Proxy extends UseSharedObjects implements Proxy_Interface
                     $msgProxy = new MessagingProxy($driver);
                     $msgResult = $msgProxy->processing($this, $msgArray, $this->dbClass->updatedRecord());
                     if ($msgResult !== true) {
-                        $this->logger->setErrorMessage("Mail sending error: $msgResult");
+                        $this->logger->setWarningMessage("Mail sending error: $msgResult");
                     }
                 }
             }
@@ -415,7 +415,7 @@ class Proxy extends UseSharedObjects implements Proxy_Interface
                         $msgProxy = new MessagingProxy($driver);
                         $msgResult = $msgProxy->processing($this, $msgArray, $result);
                         if ($msgResult !== true) {
-                            $this->logger->setErrorMessage("Mail sending error: $msgResult");
+                            $this->logger->setWarningMessage("Mail sending error: $msgResult");
                         }
                     }
                 }
@@ -1269,6 +1269,7 @@ class Proxy extends UseSharedObjects implements Proxy_Interface
             }
         }
         $this->addOutputData('errorMessages', $this->logger->getErrorMessages());
+        $this->addOutputData('warningMessages', $this->logger->getWarningMessages());
         $this->addOutputData('debugMessages', $this->logger->getDebugMessages());
     }
 
