@@ -13,6 +13,9 @@ Also the Migration Guide (Japanese) might be informative:
 Ver.9 (in development)
 - IMLibUI.revertOnValidationError can control to retrieve the original value or not, after validation error.
   The default value is true, and it means retrieve it.
+- DB\Logger class accept the setWarningMessage() method, and it shows the message with the alert() on client.
+  Also INTERMediatorLog.warningMessagePrevent can stop the alert box with setting to true, and the default is false.
+- In case of Messaging errors, the Warining Messages are set instead of error messages.
 
 Ver.8 (July 22, 2021)
 - [Important] If you see the message which tells the ServiceServer couldn't boot just after installation,
